[gd_scene load_steps=5 format=3 uid="uid://i6miwrb17jpc"]

[ext_resource type="Script" uid="uid://6cfbnp85qcny" path="res://!tools/event_editer/event_editor_view.gd" id="1_crl0h"]
[ext_resource type="Script" uid="uid://7a2ve0bbfbe3" path="res://!tools/event_editer/event_graph_editor.gd" id="2_4r0nt"]

[sub_resource type="Image" id="Image_mk6yc"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 255, 92, 92, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 255, 93, 93, 255, 255, 92, 92, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 92, 92, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 92, 92, 127, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 231, 255, 90, 90, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 231, 255, 90, 90, 54, 255, 94, 94, 57, 255, 93, 93, 233, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 42, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 42, 255, 93, 93, 233, 255, 92, 92, 232, 255, 93, 93, 41, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 42, 255, 93, 93, 233, 255, 92, 92, 232, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 45, 255, 93, 93, 44, 0, 0, 0, 0, 255, 91, 91, 42, 255, 91, 91, 42, 0, 0, 0, 0, 255, 91, 91, 45, 255, 93, 93, 44, 0, 0, 0, 0, 255, 91, 91, 42, 255, 91, 91, 42, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 45, 255, 92, 92, 235, 255, 92, 92, 234, 255, 89, 89, 43, 0, 0, 0, 0, 0, 0, 0, 0, 255, 91, 91, 45, 255, 92, 92, 235, 255, 92, 92, 234, 255, 89, 89, 43, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 92, 92, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 91, 91, 59, 255, 92, 92, 61, 255, 92, 92, 235, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 233, 255, 91, 91, 59, 255, 92, 92, 61, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 255, 93, 93, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id="ImageTexture_diu6t"]
image = SubResource("Image_mk6yc")

[node name="EventEditorView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_crl0h")

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="Content"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Toolbar" type="HBoxContainer" parent="Content/MarginContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="NewButton" type="Button" parent="Content/MarginContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
icon = SubResource("ImageTexture_diu6t")
flat = true

[node name="OpenButton" type="Button" parent="Content/MarginContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
icon = SubResource("ImageTexture_diu6t")
flat = true

[node name="SaveButton" type="Button" parent="Content/MarginContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
icon = SubResource("ImageTexture_diu6t")
flat = true

[node name="VSeparator" type="VSeparator" parent="Content/MarginContainer/Toolbar"]
layout_mode = 2

[node name="AddNodeButton" type="Button" parent="Content/MarginContainer/Toolbar"]
unique_name_in_owner = true
layout_mode = 2
icon = SubResource("ImageTexture_diu6t")
flat = true

[node name="Spacer" type="Control" parent="Content/MarginContainer/Toolbar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator2" type="VSeparator" parent="Content/MarginContainer/Toolbar"]
visible = false
layout_mode = 2

[node name="VersionLabel" type="Label" parent="Content/MarginContainer/Toolbar"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "v%s"

[node name="HSeparator" type="HSeparator" parent="Content"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="EventGraphEditor" type="GraphEdit" parent="Content"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
right_disconnects = true
script = ExtResource("2_4r0nt")

[node name="SaveFileDialog" type="FileDialog" parent="."]
title = "Save a Quest"
initial_position = 4
size = Vector2i(400, 400)
filters = PackedStringArray("*.tres ; Quest files")
use_native_dialog = true

[node name="LoadFileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 4
size = Vector2i(400, 400)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.tres ; Quest files")

[node name="AddNodePopupMenu" type="PopupMenu" parent="."]
title = "Add Node"
hide_on_state_item_selection = true
item_count = 4
item_0/text = "Start Node"
item_0/id = 0
item_1/text = "End Node"
item_1/id = 1
item_2/text = "Stage Node"
item_2/id = 2
item_3/text = "Dialoge Node"
item_3/id = 3

[connection signal="pressed" from="Content/MarginContainer/Toolbar/NewButton" to="." method="_on_new_button_pressed"]
[connection signal="pressed" from="Content/MarginContainer/Toolbar/OpenButton" to="." method="_on_open_button_pressed"]
[connection signal="pressed" from="Content/MarginContainer/Toolbar/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Content/MarginContainer/Toolbar/AddNodeButton" to="." method="_on_add_node_button_pressed"]
[connection signal="connection_request" from="Content/EventGraphEditor" to="Content/EventGraphEditor" method="_on_connection_request"]
[connection signal="copy_nodes_request" from="Content/EventGraphEditor" to="Content/EventGraphEditor" method="_on_copy_nodes_request"]
[connection signal="delete_nodes_request" from="Content/EventGraphEditor" to="Content/EventGraphEditor" method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="Content/EventGraphEditor" to="Content/EventGraphEditor" method="_on_disconnection_request"]
[connection signal="node_deselected" from="Content/EventGraphEditor" to="Content/EventGraphEditor" method="_on_node_deselected"]
[connection signal="node_selected" from="Content/EventGraphEditor" to="Content/EventGraphEditor" method="_on_node_selected"]
[connection signal="paste_nodes_request" from="Content/EventGraphEditor" to="Content/EventGraphEditor" method="_on_paste_nodes_request"]
[connection signal="popup_request" from="Content/EventGraphEditor" to="." method="_on_popup_request"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_save_file_dialog_file_selected"]
[connection signal="file_selected" from="LoadFileDialog" to="." method="_on_load_file_dialog_file_selected"]
[connection signal="index_pressed" from="AddNodePopupMenu" to="." method="_on_add_node_index_pressed"]
